<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_airplane"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/secondaryLayoutWidth"
        android:layout_height="@dimen/secondaryLayoutHeight"
        android:background="@drawable/rounded_corner_blue"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <EditText
            android:id="@+id/emailEditTextRegister"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_corner_grey"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="#99000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_corner_grey"
            android:gravity="center"
            android:hint="@string/username"
            android:textColor="#99000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditTextRegister" />

        <EditText
            android:id="@+id/passwordEditTextRegister"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_corner_grey"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#99000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameEditText" />

        <EditText
            android:id="@+id/confirmPasswordEditTextRegister"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_corner_grey"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="#99000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditTextRegister" />

        <CheckBox
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="5dp"
            android:button="@drawable/check_selector"
            app:layout_constraintEnd_toStartOf="@id/terms_text"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditTextRegister" />

        <TextView
            android:id="@+id/terms_text"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="30dp"
            android:text="@string/i_accept_the_terms_and_conditions"
            android:textColor="@drawable/check_text_color_selector"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditTextRegister" />


        <TextView
            android:id="@+id/loginAccount"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:gravity="center"
            android:text="@string/you_have_an_account_login"
            android:textColor="@color/fadedTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terms" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="@dimen/newLoginButtonWidth"
            android:layout_height="@dimen/newLoginButtonHeight"
            android:layout_marginTop="23dp"
            android:background="@drawable/rounded_button_with_shadow"
            android:elevation="@dimen/loginElevation"
            android:text="@string/register"
            android:textColor="@color/fadedTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>