<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/icon_for_title"
        android:src="@drawable/ic_title_turquoise_24dp"
        app:layout_constraintEnd_toStartOf="@id/textInputLayoutTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#000" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/icon_for_location"
        android:src="@drawable/ic_location_on_turquoise_24dp"
        app:layout_constraintEnd_toStartOf="@id/textInputLayoutAddress"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:maxLines="1"
            android:textColor="#000" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/icon_for_location"
        android:src="@drawable/ic_today_turquoise_24dp"
        app:layout_constraintEnd_toStartOf="@id/date_text"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddress" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/rounded_corner_buttons"
        android:text="@string/choose_date"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddress" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="36dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddress" />

    <ImageView
        android:id="@+id/image_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/icon_for_location"
        android:src="@drawable/ic_description_turquoise_24dp"
        app:layout_constraintEnd_toStartOf="@id/textInputLayoutDescription"
        app:layout_constraintTop_toBottomOf="@id/date_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text|textMultiLine"
            android:maxLines="5"
            android:textColor="#000"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/icon_for_participants"
        android:src="@drawable/ic_participants_turquoise_24dp"
        app:layout_constraintEnd_toStartOf="@id/participants_text"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription" />

    <TextView
        android:id="@+id/participants_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/participants"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription" />

    <ScrollView
        android:id="@+id/participants_scrollview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/participants_text">

        <LinearLayout
            android:id="@+id/participants_linear_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/participants_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/errorMessageColor"
                android:visibility="gone" />

            <Button
                android:id="@+id/add_participants_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:drawableStart="@drawable/ic_add_grey_24dp"
                android:text="@string/add_participants"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/grey_color_changing" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/create_new_trip_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner_grey"
        android:text="@string/create_new_trip"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>